12_Microservice_Architecture/local_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /conversation-service/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: conversation-service
                port:
                  number: 5000
          - path: /ai-service/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ai-service
                port:
                  number: 8000
          - path: /frontend-italian/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-italian
                port:
                  number: 3000
          - path: /frontend-korean/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-korean
                port:
                  number: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  selector:
    app.kubernetes.io/name: ingress-nginx
